--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <meta http-equiv="Refresh" content="0; url='//github.com/itsperdi'" />
+    <meta http-equiv="Refresh" content="0; url='//github.com/itsverd'" />
 </head>
 <body>
 </body>
